option optimize_for = SPEED;


message ImageMsg{
	required string key = 1;
	required bytes imageData = 2;
}

message AppendEntries{
	required int32 leaderId = 1;
	required ImageMsg imageMsg = 2;
	required int64 timeStampOnLatestUpdate = 3;		
	required RequestType requestType = 4;	

	enum RequestType{
	
	GET = 0;
	POST = 1;
	PUT = 2;	
	DELETE = 3;	
	}
}

message AppendEntriesResponse{
	required IsUpdated isUpdated = 1;
	
	enum IsUpdated{
	
	YES = 0;
	NO = 1;
	
	}
}

message AppendEntriesPacket{

	required int64 unixTimeStamp = 1;

	
	 oneof payload{							
		 AppendEntries appendEntries = 2;
		 AppendEntriesResponse appendEntriesResponse = 3;		
	} 


}




