import "AppendEntriesRPC.proto";

message RequestVoteRPC{

required int32 term = 1;
required string candidateId = 2;
repeated LogEntries logEntries = 3;	
required int64 timeStampOnLatestUpdate = 4;

}

message ResponseVoteRPC{

required int32 term = 1;
required IsVoteGranted isVoteGranted = 2;


enum IsVoteGranted{
	
	YES = 0;
	NO = 1;
	
	}

}


message VoteRPCPacket{
	required int64 unixTimestamp  = 1;
	oneof payload {
		RequestVoteRPC requestVoteRPC = 2;
		ResponseVoteRPC responseVoteRPC = 3;	
}

}